# sonic-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
cli/src/: main.rs  util.rs.in
examples/: proxy.rs
src/: api.rs  error.rs  io.rs  lib.rs
src/model/: mod.rs  protocol.rs  protocol.rs.in
src/server/: .handler.rs.rustfmt  handler.rs
