[package]
name = "sonic"
version = "0.6.0"
authors = ["Ernest Romero <ernest@unstable.build>"]
description = "client library for Sonicd, a data streaming gateway"
license-file = "LICENSE"
documentation = "http://sonic.unstable.build/rustdoc"
homepage = "http://sonic.unstable.build"
repository = "https://github.com/xarxa6/sonic-rs"
include = [
  "src/**/*.rs*",
  "cli/**/*.rs*",
  "Cargo.toml",
]

[features]
server = ["rux"]

[lib]
name = "sonic"
path = "src/lib.rs"

[[bin]]
name = "sonic"
path = "cli/src/main.rs"

[dependencies]
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
error-chain = "*"
byteorder = "*"
nix = { version = "*", features = ["signalfd"] }
log = "*"
lazy_static = "*"

# cli
regex = "*"
docopt = "*"
rpassword = "*"
rustc-serialize = "*"
env_logger = "*"
ansi_term = "*"
pbr = "*"

[dependencies.rux]
# git = "https://github.com/ernestrc/rux.git"
path = "/home/ernest/dev/rux"
optional = true

# [profile.release]
# debug = true
# opt-level = 3
# lto = false
