[package]
name = "sonic"
version = "0.6.1"
authors = ["Ernest Romero <ernest@unstable.build>"]
description = "client library for Sonicd, a data streaming gateway"
license-file = "LICENSE"
documentation = "http://sonic.unstable.build/rustdoc"
homepage = "http://sonic.unstable.build"
repository = "https://github.com/xarxa6/sonic-rs"
include = [
  "src/**/*.rs*",
  "cli/**/*.rs*",
  "Cargo.toml",
  "build.rs"
]
build = "build.rs"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[lib]
name = "sonic"
path = "src/lib.rs"

[[bin]]
name = "sonic"
path = "cli/src/main.rs"

[build-dependencies]
serde_codegen = { version = "0.8.2", optional = true }
syntex = "0.41.0"

[dependencies]
serde = "0.8.1"
serde_json = "0.8.1"
serde_macros = { version = "0.8.1", optional = true }
error-chain = "0.5.0"
byteorder = "0.5.3"
nix = { version = "0.6.0", features = ["signalfd"] }
log = "0.3.6"
lazy_static = "0.1.16"

# cli
regex = "0.1.71"
docopt = "0.6.81"
rpassword = "0.2.3"
rustc-serialize = "0.3.19"
env_logger = "0.3.3"
ansi_term = "0.7"
ws = { version =  "0.5.0", optional = true }
pbr = "1.0.0"
